[package]
name = "firn"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = { version = "0.34", default-features = false }
thiserror = "1.0"
leb128 = "0.2.1"
bincode = "1.3.3"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
infer = { version = "0.3", default-features = false }

[profile.release]
debug = true
