[package]
name = "firn"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
kamadak-exif = "0.5.5"
infer = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
csv = "1.2.2"
rstar = "0.11.0"
serde_json = "1.0.105"
time = { version = "0.3.28", features = ["serde", "parsing"] }
walkdir = "2.3.3"

[profile.release]
debug = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "query"
harness = false
